[package]
name = "thumbcache"
description = "Get file thumbnail on Windows"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/yhdgms1/thumbcache"
repository = "https://github.com/yhdgms1/thumbcache"
readme = "README.md"
license = "MIT"
keywords = ["windows", "thumbnail", "preview"]
exclude = [
  "src/main.rs"
]

[dependencies.windows]
version = "0.61.1"
features = ["Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_Memory", "Win32_Foundation", "Win32_System_Com"]
